k8s/redis-deployment.yaml
apiVersion: apps/v1

kind: Deployment
metadata:
  name: redis-deployment
  namespace: superapp
spec:
  replicas: 1
  selector: 
    matchLabels:
      component: redis
  template:
    metadata:
      labels: 
        component: redis
    spec: 
      volumes:
        - name: redis-storage
          persistentVolumeClaim:
            claimName: redis-persistent-volume-claim
      containers:
        - name: redis
          resources:
            requests:
              cpu: 20m
            limits:
              cpu: 30m
          image: <ACR name>.azurecr.io/library/redis:latest
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: redis-storage
              mountPath:  "/data"
