k8s/worker-deployment.yaml
apiVersion: apps/v1

kind: Deployment
metadata:
  name: worker-deployment
  namespace: superapp
spec:
  replicas: 2
  selector:
    matchLabels:
      component: worker
  template:
    metadata:
      labels:
        component: worker
    spec:
      serviceAccountName: workersa
      containers:
        - name: worker
          resources:
            requests:
              cpu: 250m
              memory: 128Mi
            limits:
              cpu: 1000m
              memory: 256Mi
          image: <ACR name>.azurecr.io/worker:v1
          ports:
            - containerPort: 2000
