k8s/worker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: worker-service
  namespace: superapp
spec:
  type: ClusterIP
  selector:
    component: worker
  ports:
    - port: 2000
      targetPort: 2000
